--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
 }
 .cards {
     display: flex;
@@ -78,4 +79,13 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-card {
+    height: 250px;
+    width: auto;
 }
