--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,8 @@ button {
     flex-direction: column;
     align-items: center;
     background-color: white;
+    gap: 10px;
+    margin-bottom: 80px;
 }
 .cards {
     display: flex;
