--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,26 @@ button {
     border: 5px #3882F6 solid;
     border-radius: 5%;
 }
+
+.section-2 {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 200;
+}
+.section-2-container {
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    padding: 80px;
+}
+.author {
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 24px;
+}
