--- a/styles.css
+++ b/styles.css
@@ -122,14 +122,24 @@ button {
     display: flex;
     justify-content: center;
     padding: 50px;
+    color: white;
 }
 .box {
     background-color: #3882F6;
-    padding: 10px;
-    width: 1200px;
+    padding: 40px;
+    width: 1100px;
+    display: flex;
+    justify-content: center;
+    gap: 330px;
+    border-radius: 1%;
 }
 .box button {
     color: white;
     border: 2px solid white;
     border-radius: 5%;
+    align-self: center;
+}
+.action {
+    font-size: 25px;
+    font-weight: bold;
 }
