Fix section 1 padding

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ button {
     align-items: center;
     background-color: white;
     gap: 10px;
-    margin-bottom: 80px;
+    padding: 50px;
+    padding-bottom: 80px;
 }
 .cards {
     display: flex;
